Fix for error comment label on mobile.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -879,7 +879,7 @@ body.pushable>.pusher {
     }
 
     #error-comment-edit-label {
-      margin: 0 0 1rem 2.8rem;
+      margin: 0 0 1rem 1rem;
     }
 
     #error-name-label {
